# TheoryConsistentDecisionDiagrams

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
docs/: doc.md  requirements.txt
examples/: abstr_bdd.py  abstr_sdd.py  ldd.py  tbdd.py  tsdd.py
src/theorydd/: _dd_dump_util.py  _string_generator.py  _utils.py  abstraction_bdd.py  abstraction_sdd.py  constants.py  custom_exceptions.py  decision_diagrams.py  duoble_negation_walker.py  formula.py  install_bin.py  lemma_extractor.py  normalizer.py  smt_solver.py  smt_solver_full_partial.py  smt_solver_partial.py  theory_bdd.py  theory_ldd.py  theory_sdd.py  theory_xsdd.py  walker_bdd.py  walker_ldd.py  walker_sdd.py  walker_xsdd.py  xsdd.py
src/theorydd/abstractdd/: abstractdd.py  abstraction_bdd.py  abstraction_sdd.py  ldd.py
src/theorydd/ddnnf/: c2d_compiler.py  d4_compiler.py  ddnnf_compiler.py  pysmt_c2d_middleware.py
src/theorydd/solvers/: lemma_extractor.py  mathsat_partial.py  mathsat_partial_extended.py  mathsat_total.py  solver.py  tabular.py  tabular_solver.py
src/theorydd/tdd/: theory_bdd.py  theory_dd.py  theory_sdd.py
src/theorydd/util/: _dd_dump_util.py  _string_generator.py  _utils.py  custom_exceptions.py  disjoint_set.py
src/theorydd/walkers/: duoble_negation_walker.py  normalizer.py  size_counter.py  walker_bdd.py  walker_ldd.py  walker_sdd.py  walker_xsdd.py
test_folder_tbdd/: abstraction.json  tbdd_data.dddmp  tbdd_data.pickle
tests/: test_abstract_bdd.py  test_abstract_sdd.py  test_formula.py  test_serialization.py  test_solvers.py  test_theory_bdd.py  test_theory_sdd.py  test_utils.py
tests/items/: rng.smt  rng_lemmas.smt
tests/test_data/abstraction_bdd/: abstraction.json  abstraction_bdd_data.dddmp  abstraction_bdd_data.pickle
tests/test_data/abstraction_sdd/: sdd.sdd  vtree.vtree
tests/test_data/theory_bdd/: tbdd_data.dddmp  tbdd_data.pickle
tests/test_data/theory_sdd/: abstraction.json  sdd.sdd
