[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "theorydd"
version = "0.0.3"
authors = [
  { name="Massimo Michelutti", email="massimo.michelutti@studenti.unitn.it" },
]
description = "Theory Consistent decision diagrams in Python through interfaces with the mathsat SMT-solver and with Cython implementations of Decision Diagrams"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Cython==3.0.8",
    "pydot==1.4.2",
    "PySDD==0.2.11",
    "PySMT==0.9.6.dev53",
    "dd @ git+https://github.com/masinag/dd.git#egg=main",
    "allsat_cnf @ git+https://github.com/masinag/allsat-cnf@main",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]